fix: adicionar flag --all-projects ao Snyk para suportar monorepo

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,5 +54,7 @@ jobs:
       - name: Run Snyk scan
         uses: snyk/actions/node@master
         continue-on-error: true
+        with:
+          args: --all-projects
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
