--- a/services/integrations/package.json
+++ b/services/integrations/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.11.5",
+    "@types/aws-lambda": "^8.10.133",
     "typescript": "^5.3.3"
   }
 }
