feat(lambda): add esbuild bundling for Lambda functions
- Added esbuild as devDependency for bundling
- Created bundle-lambdas.js script to bundle all services
- Updated workflow to use bundling instead of tsc compilation
- Changed whatsapp-bot handler from webhook.handler to index.handler
- Bundles all dependencies (including @n-agent/* packages) into single file
- Fixes 'Cannot find module' errors in Lambda runtime

--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -81,8 +81,8 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
-      - name: Build all packages
-        run: pnpm build
+      - name: Bundle Lambda functions
+        run: node scripts/bundle-lambdas.js
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
