docs: reorganizar estrutura e adicionar boas práticas de desenvolvimento Lambda
- Movido README_AWS_TOOLKIT.md  docs/AWS_TOOLKIT_GUIA.md
- Movido template.yaml  infra/sam-local-template.yaml
- Atualizado BOAS_PRATICAS_AMBIENTES.md com seção de desenvolvimento Lambda
- Adicionada regra de ouro: SEMPRE testar localmente antes de deploy
- Documentado fluxo: Debug Local (F5)  Quick Deploy Dev  CI/CD
- Criados eventos de teste para todas as Lambdas
- Adicionados comandos npm para quick-deploy e logs

--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
     "test": "turbo run test",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\"",
-    "clean": "turbo run clean && rm -rf node_modules"
+    "clean": "turbo run clean && rm -rf node_modules",
+    "bundle:lambda": "node scripts/bundle-lambdas.js",
+    "quick-deploy": "pwsh scripts/quick-deploy.ps1",
+    "logs:whatsapp": "aws logs tail /aws/lambda/n-agent-whatsapp-bot-dev --follow",
+    "logs:trips": "aws logs tail /aws/lambda/n-agent-trip-planner-dev --follow",
+    "logs:integrations": "aws logs tail /aws/lambda/n-agent-integrations-dev --follow"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.21.0",
