feat: implementar autenticação Cognito com Lambda functions
- Adicionar Cognito User Pool e Client no Terraform
- Criar serviço de autenticação (signup, login, refresh, forgot-password)
- Criar Lambda Authorizer para validação de JWT
- Adicionar rotas de autenticação no API Gateway
- Proteger rotas existentes com authorizer
- Adicionar IAM roles para novas Lambdas
- Atualizar scripts de build e deploy

--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -25,11 +25,13 @@ jobs:
 
       - name: Create placeholder ZIPs for Lambda
         run: |
-          mkdir -p services/whatsapp-bot services/trip-planner services/integrations
+          mkdir -p services/whatsapp-bot services/trip-planner services/integrations services/auth services/authorizer
           echo "placeholder" > placeholder.txt
           zip services/whatsapp-bot/whatsapp-bot.zip placeholder.txt
           zip services/trip-planner/trip-planner.zip placeholder.txt
           zip services/integrations/integrations.zip placeholder.txt
+          zip services/auth/auth.zip placeholder.txt
+          zip services/authorizer/authorizer.zip placeholder.txt
           rm placeholder.txt
 
       - name: Configure AWS credentials
@@ -110,6 +112,18 @@ jobs:
           aws lambda update-function-code \
             --function-name n-agent-integrations-${{ env.ENVIRONMENT }} \
             --zip-file fileb://services/integrations/integrations.zip
+          
+          # Auth
+          cd services/auth/dist && zip -r ../auth.zip . && cd ../../..
+          aws lambda update-function-code \
+            --function-name n-agent-auth-${{ env.ENVIRONMENT }} \
+            --zip-file fileb://services/auth/auth.zip
+          
+          # Authorizer
+          cd services/authorizer/dist && zip -r ../authorizer.zip . && cd ../../..
+          aws lambda update-function-code \
+            --function-name n-agent-authorizer-${{ env.ENVIRONMENT }} \
+            --zip-file fileb://services/authorizer/authorizer.zip
 
   deploy-frontend:
     name: Deploy Frontend to S3
