feat(whatsapp): implementar bot completo com webhook, cliente e persistência
- Adicionar tipos para WhatsApp Cloud API (webhook payload, mensagens, contatos)
- Implementar normalizer para converter payloads em formato padronizado
- Criar WhatsAppClient para envio de mensagens (texto, botões, listas, templates)
- Implementar repository para persistir mensagens no DynamoDB
- Criar bot-handler com respostas para saudações, ajuda, menu e viagem
- Atualizar webhook handler para processar mensagens e responder
- Adicionar variáveis de ambiente do WhatsApp (access_token, phone_number_id, verify_token)
- Atualizar IAM role com permissões corretas para DynamoDB
- Atualizar pipeline com variáveis do WhatsApp

Semana 4 - Fase 1: WhatsApp Webhook

--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -60,6 +60,9 @@ jobs:
           TF_VAR_facebook_app_secret: ${{ secrets.FACEBOOK_APP_SECRET }}
           TF_VAR_microsoft_client_id: ${{ secrets.MICROSOFT_CLIENT_ID }}
           TF_VAR_microsoft_client_secret: ${{ secrets.MICROSOFT_CLIENT_SECRET }}
+          TF_VAR_whatsapp_access_token: ${{ secrets.WHATSAPP_ACCESS_TOKEN }}
+          TF_VAR_whatsapp_phone_number_id: ${{ secrets.WHATSAPP_PHONE_NUMBER_ID }}
+          TF_VAR_whatsapp_verify_token: ${{ secrets.WHATSAPP_VERIFY_TOKEN }}
 
       - name: Terraform Apply
         working-directory: ./infra/environments/prod
@@ -71,6 +74,9 @@ jobs:
           TF_VAR_facebook_app_secret: ${{ secrets.FACEBOOK_APP_SECRET }}
           TF_VAR_microsoft_client_id: ${{ secrets.MICROSOFT_CLIENT_ID }}
           TF_VAR_microsoft_client_secret: ${{ secrets.MICROSOFT_CLIENT_SECRET }}
+          TF_VAR_whatsapp_access_token: ${{ secrets.WHATSAPP_ACCESS_TOKEN }}
+          TF_VAR_whatsapp_phone_number_id: ${{ secrets.WHATSAPP_PHONE_NUMBER_ID }}
+          TF_VAR_whatsapp_verify_token: ${{ secrets.WHATSAPP_VERIFY_TOKEN }}
 
   build-and-deploy:
     name: Build and Deploy Lambda Functions
