--- a/turbo.json
+++ b/turbo.json
@@ -4,7 +4,8 @@
   "pipeline": {
     "build": {
       "dependsOn": ["^build"],
-      "outputs": ["dist/**", ".next/**", "build/**"]
+      "outputs": ["dist/**", ".next/**", "build/**"],
+      "cache": true
     },
     "dev": {
       "cache": false,
@@ -12,13 +13,20 @@
     },
     "test": {
       "dependsOn": ["build"],
-      "outputs": ["coverage/**"]
+      "outputs": ["coverage/**"],
+      "cache": true
     },
     "lint": {
-      "dependsOn": ["^build"]
+      "dependsOn": ["^build"],
+      "cache": true,
+      "outputs": []
     },
     "clean": {
       "cache": false
     }
+  },
+  "globalEnv": ["NODE_ENV", "CI"],
+  "remoteCache": {
+    "enabled": true
   }
 }
