--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -101,10 +101,12 @@ jobs:
           cache: 'pnpm'
 
       - name: Install dependencies
-        run: pnpm install --frozen-lockfile
+        run: pnpm install --frozen-lockfile --prefer-offline
 
       - name: Bundle Lambda functions
         run: node scripts/bundle-lambdas.js
+        env:
+          NODE_ENV: production
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
@@ -148,7 +150,8 @@ jobs:
   deploy-frontend:
     name: Deploy Frontend to S3
     runs-on: ubuntu-latest
-    needs: build-and-deploy
+    # Roda em paralelo com build-and-deploy para economizar tempo
+    needs: deploy-infrastructure
     environment:
       name: production
     
@@ -168,13 +171,15 @@ jobs:
           cache: 'pnpm'
 
       - name: Install dependencies
-        run: pnpm install --frozen-lockfile
+        run: pnpm install --frozen-lockfile --prefer-offline
 
       - name: Build frontend
         working-directory: ./apps/web-client
         run: pnpm build
         env:
           VITE_API_URL: https://api.n-agent.com
+          TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
+          TURBO_TEAM: ${{ secrets.TURBO_TEAM }}
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
