perf(ci): adicionar path filters para ignorar commits de documentacao
- CI e Deploy nao executam em mudancas de *.md, docs/, .promtps_iniciais/
- Economia de ~2-3min por commit de documentacao
- Exemplo: ultimos 2 commits de docs desperdicaram ~4min

Path filters configurados:
- **.md (README, changelogs)
- docs/** (documentacao tecnica)
- .promtps_iniciais/** (planejamento)
- LICENSE, .gitignore
- Scripts de teste temporarios

Commits de codigo continuam executando normalmente.
Impacto: de 70-80 commits/mes para 100-120 commits/mes no plano gratuito.

--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -3,6 +3,14 @@ name: Deploy to Production
 on:
   push:
     branches: [main]
+    paths-ignore:
+      - '**.md'
+      - 'docs/**'
+      - '.promtps_iniciais/**'
+      - 'LICENSE'
+      - '.gitignore'
+      - 'test-*.ps1'
+      - 'test-*.sh'
     tags:
       - 'v*.*.*'
   workflow_dispatch:
