--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,8 +3,20 @@ name: CI
 on:
   pull_request:
     branches: [main, develop]
+    paths-ignore:
+      - '**.md'
+      - 'docs/**'
+      - '.promtps_iniciais/**'
+      - 'LICENSE'
+      - '.gitignore'
   push:
     branches: [main, develop]
+    paths-ignore:
+      - '**.md'
+      - 'docs/**'
+      - '.promtps_iniciais/**'
+      - 'LICENSE'
+      - '.gitignore'
 
 jobs:
   lint-and-test:
