--- a/services/ai-orchestrator/package.json
+++ b/services/ai-orchestrator/package.json
@@ -1,23 +1,24 @@
 {
-  "name": "@n-agent/whatsapp-bot",
+  "name": "@n-agent/ai-orchestrator",
   "version": "0.1.0",
   "private": true,
-  "type": "module",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
     "lint": "eslint . --ext ts",
-    "clean": "rm -rf dist node_modules .turbo"
+    "test": "echo \"No tests yet\""
   },
   "dependencies": {
+    "@aws-sdk/client-bedrock-agent-runtime": "^3.490.0",
     "@aws-sdk/client-dynamodb": "^3.490.0",
-    "@aws-sdk/client-lambda": "^3.490.0",
     "@aws-sdk/lib-dynamodb": "^3.490.0",
     "@n-agent/core-types": "workspace:*",
     "@n-agent/logger": "workspace:*"
   },
   "devDependencies": {
-    "@types/node": "^20.11.5",
-    "@types/aws-lambda": "^8.10.133",
-    "typescript": "^5.3.3"
+    "@types/aws-lambda": "^8.10.131",
+    "@types/node": "^20.10.0",
+    "typescript": "^5.3.0"
   }
 }
