--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -158,6 +158,18 @@ jobs:
           aws lambda update-function-code \
             --function-name n-agent-authorizer-${{ env.ENVIRONMENT }} \
             --zip-file fileb://services/authorizer/authorizer.zip
+          
+          # Action Groups
+          cd services/action-groups/dist && zip -r ../action-groups.zip . && cd ../../..
+          aws lambda update-function-code \
+            --function-name n-agent-action-groups \
+            --zip-file fileb://services/action-groups/action-groups.zip
+          
+          # AI Orchestrator
+          cd services/ai-orchestrator/dist && zip -r ../ai-orchestrator.zip . && cd ../../..
+          aws lambda update-function-code \
+            --function-name n-agent-ai-orchestrator \
+            --zip-file fileb://services/ai-orchestrator/ai-orchestrator.zip
 
   deploy-frontend:
     name: Deploy Frontend to S3
