feat(cleanup): Fase 0 - Remove Bedrock Agents para migração ao AgentCore
BREAKING CHANGE: Remove recursos do Bedrock Agents

Recursos removidos:
- bedrock.tf (backup mantido)
- aws_bedrockagent_agent.n_agent
- aws_bedrockagent_agent_alias.prod
- aws_bedrockagent_agent_action_group.trip_management
- aws_lambda_function.action_groups
- aws_lambda_function.ai_orchestrator
- IAM roles: bedrock_agent_role, action_groups_role, ai_orchestrator_role
- SSM Parameters: agent-id, agent-alias-id
- CloudWatch Log Groups das Lambdas removidas

Documentação adicionada:
- 00_FASE_CLEANUP.md
- COMPARATIVO_AGENTS_VS_AGENTCORE.md
- PLANO_BEDROCK_AGENTCORE.md

Próximos passos:
1. terraform apply vai destruir os recursos na AWS
2. Remover services/action-groups e services/ai-orchestrator
3. Iniciar implementação do AgentCore

--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -37,15 +37,13 @@ jobs:
 
       - name: Create placeholder ZIPs for Lambda
         run: |
-          mkdir -p services/whatsapp-bot services/trip-planner services/integrations services/auth services/authorizer services/action-groups services/ai-orchestrator
+          mkdir -p services/whatsapp-bot services/trip-planner services/integrations services/auth services/authorizer
           echo "placeholder" > placeholder.txt
           zip services/whatsapp-bot/whatsapp-bot.zip placeholder.txt
           zip services/trip-planner/trip-planner.zip placeholder.txt
           zip services/integrations/integrations.zip placeholder.txt
           zip services/auth/auth.zip placeholder.txt
           zip services/authorizer/authorizer.zip placeholder.txt
-          zip services/action-groups/action-groups.zip placeholder.txt
-          zip services/ai-orchestrator/ai-orchestrator.zip placeholder.txt
           rm placeholder.txt
 
       - name: Configure AWS credentials
@@ -160,18 +158,6 @@ jobs:
           aws lambda update-function-code \
             --function-name n-agent-authorizer-${{ env.ENVIRONMENT }} \
             --zip-file fileb://services/authorizer/authorizer.zip
-          
-          # Action Groups
-          cd services/action-groups/dist && zip -r ../action-groups.zip . && cd ../../..
-          aws lambda update-function-code \
-            --function-name n-agent-action-groups \
-            --zip-file fileb://services/action-groups/action-groups.zip
-          
-          # AI Orchestrator
-          cd services/ai-orchestrator/dist && zip -r ../ai-orchestrator.zip . && cd ../../..
-          aws lambda update-function-code \
-            --function-name n-agent-ai-orchestrator \
-            --zip-file fileb://services/ai-orchestrator/ai-orchestrator.zip
 
   deploy-frontend:
     name: Deploy Frontend to S3
