--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,13 +71,18 @@ jobs:
         S3_BUCKET: n-agent-documents-test
 
   deploy:
-    name: Deploy to AgentCore
+    name: Deploy Infrastructure via Terraform
     runs-on: ubuntu-latest
     needs: [lint, test]
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     
     steps:
     - uses: actions/checkout@v4
+    
+    - name: Setup Terraform
+      uses: hashicorp/setup-terraform@v3
+      with:
+        terraform_version: 1.6.0
     
     - name: Set up Python
       uses: actions/setup-python@v5
@@ -89,7 +94,7 @@ jobs:
         curl -LsSf https://astral.sh/uv/install.sh | sh
         echo "$HOME/.cargo/bin" >> $GITHUB_PATH
     
-    - name: Install dependencies
+    - name: Install Python dependencies
       run: |
         cd agent
         uv sync
@@ -97,19 +102,33 @@ jobs:
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v4
       with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_PROD }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_PROD }}
         aws-region: us-east-1
     
-    - name: Deploy to AgentCore
+    - name: Terraform Init
       run: |
-        cd agent
-        uv run agentcore configure --entrypoint src/main.py
-        uv run agentcore launch
+        cd infra/terraform/environments/prod
+        terraform init
+    
+    - name: Terraform Plan
+      run: |
+        cd infra/terraform/environments/prod
+        terraform plan \
+          -var="whatsapp_verify_token=${{ secrets.WHATSAPP_VERIFY_TOKEN }}" \
+          -var="whatsapp_access_token=${{ secrets.WHATSAPP_ACCESS_TOKEN }}" \
+          -var="whatsapp_phone_number_id=${{ secrets.WHATSAPP_PHONE_NUMBER_ID }}" \
+          -var="google_oauth_client_id=${{ secrets.GOOGLE_OAUTH_CLIENT_ID }}" \
+          -var="google_oauth_client_secret=${{ secrets.GOOGLE_OAUTH_CLIENT_SECRET }}" \
+          -var="facebook_app_id=${{ secrets.FACEBOOK_APP_ID }}" \
+          -var="facebook_app_secret=${{ secrets.FACEBOOK_APP_SECRET }}" \
+          -var="microsoft_client_id=${{ secrets.MICROSOFT_CLIENT_ID }}" \
+          -var="microsoft_client_secret=${{ secrets.MICROSOFT_CLIENT_SECRET }}" \
+          -out=tfplan
+    
+    - name: Terraform Apply
+      run: |
+        cd infra/terraform/environments/prod
+        terraform apply -auto-approve tfplan
       env:
-        ROUTER_MODEL: us.amazon.nova-micro-v1:0
-        CHAT_MODEL: us.amazon.nova-lite-v1:0
-        PLANNING_MODEL: us.amazon.nova-pro-v1:0
-        VISION_MODEL: anthropic.claude-3-5-sonnet-20241022-v2:0
         AWS_REGION: us-east-1
-        BEDROCK_AGENTCORE_MEMORY_ID: ${{ secrets.BEDROCK_AGENTCORE_MEMORY_ID }}
