feat: Optimize CI/CD and document OpenSearch costs
CI/CD Improvements:
- Added timeout: 30 minutes (for OpenSearch provisioning)
- Added Node.js setup for Lambda build
- Added Lambda build step before Terraform deploy
- Maintained all existing steps (lint, test, terraform)

Cost Analysis:
- Created docs/COST_ANALYSIS.md with complete breakdown
- OpenSearch Serverless: .60/month (2 OCUs minimum) - EXPENSIVE!
- Alternative without Memory: .50/month (viable for POC)
- Added warnings in agentcore/main.tf about OpenSearch cost

Key Decision Point:
- OpenSearch is for Bedrock Memory (conversation context)
- Agents work perfectly WITHOUT Memory for Fase 0-1
- Recommendation: Start without Memory, enable in Fase 4+
- Break-even: Need 10+ paying customers to justify OpenSearch

Cost Scenarios:
- Without Memory (Fase 0-1): ~.50/month
- With Memory (Fase 4+): ~/month
- Alternative Memory (DynamoDB): ~/month

Documentation:
- Detailed cost breakdown by service
- Scaling projections (100-1000 users)
- Strategic recommendations by phase
- FAQ about OpenSearch alternatives

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,6 +75,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [lint, test]
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    timeout-minutes: 30  # OpenSearch provisioning can take 15-20 min
     
     steps:
     - uses: actions/checkout@v4
@@ -83,6 +84,11 @@ jobs:
       uses: hashicorp/setup-terraform@v3
       with:
         terraform_version: 1.6.0
+    
+    - name: Set up Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '20'
     
     - name: Set up Python
       uses: actions/setup-python@v5
@@ -98,6 +104,12 @@ jobs:
       run: |
         cd agent
         uv sync
+    
+    - name: Build Lambda WhatsApp
+      run: |
+        cd lambdas/whatsapp-webhook
+        npm install
+        npm run build
     
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v4
