--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,13 +3,25 @@ name: CI
 on:
   push:
     branches: [ main, develop ]
+    paths-ignore:
+      - 'docs/**'
+      - '**.md'
+      - '.gitignore'
+      - 'LICENSE'
   pull_request:
     branches: [ main, develop ]
+    paths-ignore:
+      - 'docs/**'
+      - '**.md'
+      - '.gitignore'
+      - 'LICENSE'
 
 jobs:
   lint:
-    name: Lint
+    name: Lint Python Code
     runs-on: ubuntu-latest
+    # Only run if Python code changed
+    if: contains(github.event.head_commit.modified, 'agent/') || github.event_name == 'pull_request'
     
     steps:
     - uses: actions/checkout@v4
@@ -18,6 +30,16 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: '3.13'
+    
+    - name: Cache UV dependencies
+      uses: actions/cache@v4
+      with:
+        path: |
+          ~/.cache/uv
+          agent/.venv
+        key: ${{ runner.os }}-uv-${{ hashFiles('agent/pyproject.toml', 'agent/uv.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-uv-
     
     - name: Install UV
       run: |
@@ -40,8 +62,10 @@ jobs:
         uv run black --check src/
 
   test:
-    name: Test
+    name: Test Python Code
     runs-on: ubuntu-latest
+    # Only run if Python code changed
+    if: contains(github.event.head_commit.modified, 'agent/') || github.event_name == 'pull_request'
     
     steps:
     - uses: actions/checkout@v4
@@ -50,6 +74,16 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: '3.13'
+    
+    - name: Cache UV dependencies
+      uses: actions/cache@v4
+      with:
+        path: |
+          ~/.cache/uv
+          agent/.venv
+        key: ${{ runner.os }}-uv-${{ hashFiles('agent/pyproject.toml', 'agent/uv.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-uv-
     
     - name: Install UV
       run: |
@@ -74,8 +108,14 @@ jobs:
     name: Deploy Infrastructure via Terraform
     runs-on: ubuntu-latest
     needs: [lint, test]
-    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-    timeout-minutes: 30  # OpenSearch provisioning can take 15-20 min
+    # Deploy only on main branch push and if infrastructure or agent code changed
+    if: |
+      github.ref == 'refs/heads/main' && 
+      github.event_name == 'push' &&
+      (contains(github.event.head_commit.modified, 'infra/') || 
+       contains(github.event.head_commit.modified, 'agent/') ||
+       contains(github.event.head_commit.modified, 'lambdas/'))
+    timeout-minutes: 30
     
     steps:
     - uses: actions/checkout@v4
@@ -105,10 +145,20 @@ jobs:
         cd agent
         uv sync
     
+    - name: Cache Node modules
+      uses: actions/cache@v4
+      with:
+        path: |
+          lambdas/whatsapp-webhook/node_modules
+          ~/.npm
+        key: ${{ runner.os }}-node-${{ hashFiles('lambdas/whatsapp-webhook/package-lock.json') }}
+        restore-keys: |
+          ${{ runner.os }}-node-
+    
     - name: Build Lambda WhatsApp
       run: |
         cd lambdas/whatsapp-webhook
-        npm install
+        npm ci  # Use ci instead of install for reproducible builds
         npm run build
     
     - name: Configure AWS credentials
