--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -107,8 +107,10 @@ jobs:
   deploy:
     name: Deploy Infrastructure via Terraform
     runs-on: ubuntu-latest
-    needs: [lint, test]
-    # Deploy only on main branch push and if infrastructure or agent code changed
+    # Deploy only runs if:
+    # 1. On main branch push
+    # 2. Infrastructure, agent, or lambdas code changed
+    # Note: Does NOT depend on lint/test to allow infra-only changes
     if: |
       github.ref == 'refs/heads/main' && 
       github.event_name == 'push' &&
