ci: fix pipeline and migrate to Python 3.12
- Fix AWS CLI installation (x86_64 for container AMD64, not ARM64)
- Migrate from Python 3.11 to 3.12 (better wheel availability)
- Fix entrypoint in .bedrock_agentcore.yaml (main.py -> src/main.py)
- Update all docs to reflect Python 3.12
- Simplify agent definition (918 -> 310 lines, 66% reduction)
- Remove redundant docs (WINDOWS_DEPLOYMENT_GUIDE.md, WSL2_SETUP.md)
- Configure GitHub secrets via gh CLI
- All 29 tests passing with Python 3.12

--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,24 @@ Thumbs.db
 .pytest_cache/
 .coverage
 htmlcov/
+*.pyc
+*.pyo
+*.pyd
+.Python
+pip-log.txt
+pip-delete-this-directory.txt
+.tox/
+.hypothesis/
+.mypy_cache/
+.dmypy.json
+dmypy.json
 
 # Logs
 *.log
 npm-debug.log*
+
+# AgentCore
+agent/.bedrock_agentcore_cache/
+agent/deployment.zip
+agent/dependencies.zip
+agent/requirements.txt
