--- a/agent/.bedrock_agentcore.yaml
+++ b/agent/.bedrock_agentcore.yaml
@@ -1,39 +1,60 @@
-name: n-agent
-description: Assistente pessoal de viagens com arquitetura multi-agente e cost optimization
-region: us-east-1
-
-runtime:
-  entrypoint: src/main.py
-  python_version: "3.13"
-  timeout: 600  # 10 minutos para operações de planejamento
-  memory: 2048  # 2GB para melhor performance com múltiplos modelos
-
-# AgentCore Memory (será configurado no deploy)
-# Para configurar: agentcore configure --memory-id <MEMORY_ID>
-
-environment:
-  # AWS Resources
-  DYNAMODB_TABLE: n-agent-core
-  S3_BUCKET: n-agent-documents
-  
-  # Logging
-  LOG_LEVEL: INFO
-  
-  # Router configuration (Cost Optimization 76%)
-  ROUTER_MODEL: us.amazon.nova-micro-v1:0  # $0.035/1M - Classificação
-  CHAT_MODEL: us.amazon.nova-lite-v1:0     # $0.06/1M - Queries simples
-  PLANNING_MODEL: us.amazon.nova-pro-v1:0  # $0.80/1M - Planejamento complexo
-  VISION_MODEL: anthropic.claude-3-sonnet-20240229-v1:0  # $3.00/1M - Visão
-  
-  # AWS Region (opcional override)
-  AWS_REGION: us-east-1
-  
-  # AgentCore Memory ID (será configurado no deploy)
-  # BEDROCK_AGENTCORE_MEMORY_ID: <será configurado>
-
-# Best Practices da AWS Documentation:
-# 1. Usar timeout adequado para workloads de planejamento (5-10 min)
-# 2. Memory 2GB recomendada para multi-agent systems
-# 3. Python 3.13 compatível com Strands e AgentCore
-# 4. Environment variables para configuração sem hardcode
-
+default_agent: nagent
+agents:
+  nagent:
+    name: nagent
+    entrypoint: src/main.py
+    deployment_type: direct_code_deploy
+    runtime_type: PYTHON_3_12
+    platform: linux/amd64
+    container_runtime: null
+    source_path: .
+    aws:
+      execution_role: arn:aws:iam::944938120078:role/AmazonBedrockAgentCoreSDKRuntime-us-east-1-b2d867ef22
+      execution_role_auto_create: false
+      account: '944938120078'
+      region: us-east-1
+      ecr_repository: null
+      ecr_auto_create: false
+      s3_path: s3://bedrock-agentcore-codebuild-sources-944938120078-us-east-1
+      s3_auto_create: false
+      network_configuration:
+        network_mode: PUBLIC
+        network_mode_config: null
+      protocol_configuration:
+        server_protocol: HTTP
+      observability:
+        enabled: true
+      lifecycle_configuration:
+        idle_runtime_session_timeout: 1800
+        max_lifetime: 3600
+    bedrock_agentcore:
+      agent_id: nagent-GcrnJb6DU5
+      agent_arn: arn:aws:bedrock-agentcore:us-east-1:944938120078:runtime/nagent-GcrnJb6DU5
+      agent_session_id: 6ab45a92-6c0e-4ef0-81fd-0870be07534b
+    codebuild:
+      project_name: null
+      execution_role: null
+      source_bucket: null
+    memory:
+      mode: STM_ONLY
+      memory_id: nAgentMemory-jXyHuA6yrO
+      memory_arn: null
+      memory_name: nAgentMemory
+      event_expiry_days: 30
+      first_invoke_memory_check_done: false
+      was_created_by_toolkit: false
+    identity:
+      credential_providers: []
+      workload: null
+    aws_jwt:
+      enabled: false
+      audiences: []
+      signing_algorithm: ES384
+      issuer_url: null
+      duration_seconds: 300
+    authorizer_configuration: null
+    request_header_configuration: null
+    oauth_configuration: null
+    api_key_env_var_name: null
+    api_key_credential_provider_name: null
+    is_generated_by_agentcore_create: false
