ci: remove unsupported --version flag from agentcore CLI

--- a/.github/workflows/deploy-agent.yml
+++ b/.github/workflows/deploy-agent.yml
@@ -113,7 +113,7 @@ jobs:
       - name: Install AgentCore CLI
         run: |
           uv tool install bedrock-agentcore-starter-toolkit
-          agentcore --version
+          echo "✅ AgentCore CLI installed"
       
       - name: Deploy to AgentCore Runtime
         working-directory: agent
