--- a/agent/pyproject.toml
+++ b/agent/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "google-generativeai>=0.8.6",
     "jinja2>=3.1.6",
     "strands-agents>=1.20.0",
+    "aws-opentelemetry-distro>=0.3.0",
 ]
 
 [dependency-groups]
