feat: adiciona testes de produção e atualiza workflow de deploy
- Cria script test-production.sh para validação pós-deploy
- Testa basic invoke, router, memory save/retrieval
- Suporta modo local (agentcore dev) e production (AWS)
- Atualiza GitHub Actions para rodar testes automaticamente
- Atualiza prompt: deploy via pipeline é padrão (manual apenas debug)
- Adiciona documentação de testes no scripts/README.md

Relacionado: Fase 1 - Semana 1 (validação de deploy)

--- a/.github/workflows/deploy-agent.yml
+++ b/.github/workflows/deploy-agent.yml
@@ -129,11 +129,11 @@ jobs:
           echo "📋 Deployment Status:"
           agentcore status || echo "Status check failed"
       
-      - name: Test deployed agent
-        working-directory: agent
+      - name: Run Production Tests
         run: |
-          echo "🧪 Testing deployed agent..."
-          agentcore invoke '{"prompt": "Hello from CI/CD!"}' || echo "⚠️ Invoke failed - check logs"
+          echo "🧪 Running production test suite..."
+          chmod +x scripts/test-production.sh
+          ./scripts/test-production.sh production
       
       - name: Output CloudWatch logs
         if: always()
