--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -128,10 +128,11 @@ jobs:
     name: Deploy Infrastructure via Terraform
     runs-on: ubuntu-latest
     needs: changes
-    # TEMPORARIAMENTE DESABILITADO - Deploy manual via scripts/provision.sh
-    # Novos módulos (Cognito, API Gateway, Lambda BFF) requerem variáveis adicionais
-    # TODO: Adicionar secrets: COGNITO_*, API_GATEWAY_*, LAMBDA_BFF_*
-    if: false
+    # Executa apenas se houver mudanças em infra/ e for push para main
+    if: |
+      needs.changes.outputs.infra == 'true' && 
+      github.ref == 'refs/heads/main' && 
+      github.event_name == 'push'
     timeout-minutes: 30
     
     steps:
